--- a/index.html
+++ b/index.html
@@ -161,6 +161,74 @@
 				</label>
 		</div>
 	</div>
+	<div class="container pt-2">
+		<div class="row justify-content-between">
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/hab.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Memas</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus perspiciatis quasi rem sequi placeat commodi in blanditiis!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/pon.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Мем</h5>
+					<p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae accusantium beatae aspernatur molestias soluta sit illum quis?.</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/rybov.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Mimas</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae odio consectetur dignissimos dolorem reprehenderit explicabo itaque sed!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/ben.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Smeshcno</h5>
+					<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deleniti consequatur iure explicabo ad? Maiores, laborum laboriosam?</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/kal.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Smeshcno</h5>
+					<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deleniti consequatur iure explicabo ad? Maiores, laborum laboriosam?</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/dob.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Smeshcno</h5>
+					<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deleniti consequatur iure explicabo ad? Maiores, laborum laboriosam?</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/st.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Smeshcno</h5>
+					<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deleniti consequatur iure explicabo ad? Maiores, laborum laboriosam?</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+			<div class="card mb-3" style="width: 18rem;">
+				<img src="/dzh.jpg" class="card-img-top pt-2" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Smeshcno</h5>
+					<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit deleniti consequatur iure explicabo ad? Maiores, laborum laboriosam?</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
